    devices as is for non-touch devices.
24. Show genres in detailed artist and album toolbars.
25. Fix 'Append random album to queue'.
26. Parse synced lyrics, highlight current line, and scroll view with song.
27. Mark browse text items, and MAI view, as selectable.
28. Only offer album sort option if there are albums shown.
29. Allow showing queue time reamining even if only 1 track.

4.0.4
-----
1. In album style, embolden current track title even if first track in album.
2. Fix warning when changing queue view to/from album style.
3. Fix hover buttons overlapping time when listing playlist tracks.
4. Only show player menu when clicking title of 'Player settings' if there are
   multiple players.
5. Improve swipe sensitivity.
6. Fix some clipping on mobile thick now-playing bar.

4.0.3
-----
 1. Fix restating LMS from 'Server settings' page.
 2. Improve/fix album style queue for radio streams.
 3. Don't group by release type if LMS is set to ignore this.
 4. Only call 'Slim::Schema::Album->releaseTypes' for LMS 8.4 or newer.
 5. When adding/playing all discs of multi-disc set use album_id.
 6. In album style queue, group albums by disc number.
 7. Fix missing add/play hover buttons on tracks in browse view.
 8. Fix swipe to change track.
 9. Set default queue transfer method to 'Move'.
10. Fix toggle queue icon when using coloured toolbars.
11. Hide toolbar elements if insufficient width.
12. Fix breakage on older iOS.

4.0.2
-----
 1. Respect LMS's setting to not group by release type.
 2. Add jumplist support when showing multiple release types.
 3. Don't highlight active jumplist item.
 4. Remove option for letter overlay whilst scrolling.
 5. Fix reading some LMS prefs where LMS returns '?'.
 6. Only request artist_ids when searching if LMS 8.4 or newer.
 7. Allow user-supplied backdrops, by placing into
    prefs/material-skin/backdrops
 8. Query LMS for release type names.
 9. Fix play button showing in mobile layout when no tracks in queue.